--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
     <script src="https://unpkg.com/d3-geo-projection@4"></script>
     <!-- Include Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3351903024035248"
+            crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="container">
         <header>
-            <h1>USA Tariffs by Country</h1>
+            <h1>USA Tariffs Map</h1>
             <p>Interactive visualization of tariff rates imposed by the United States</p>
         </header>
         
