--- a/index.html
+++ b/index.html
@@ -16,8 +16,6 @@
     <script src="https://unpkg.com/d3-geo-projection@4"></script>
     <!-- Include Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3351903024035248"
-            crossorigin="anonymous"></script>
     <!-- Add these to the head section, after existing scripts -->
     <meta name="theme-color" content="#2c3e50">
     <meta property="og:title" content="USA Tariff Map - Interactive Visualization">
@@ -75,19 +73,6 @@
         </div>
         
         <div id="map-view" class="tab-content active">
-            <!-- Ad placement before map -->
-            <div class="ad-container">
-                <ins class="adsbygoogle"
-                     style="display:block"
-                     data-ad-client="ca-pub-3351903024035248"
-                     data-ad-slot="XXXXXXXXXX"
-                     data-ad-format="auto"
-                     data-full-width-responsive="true"></ins>
-                <script>
-                     (adsbygoogle = window.adsbygoogle || []).push({});
-                </script>
-            </div>
-            
             <div id="map-container">
                 <div id="map"></div>
                 <div id="tooltip" class="hidden">
@@ -180,5 +165,8 @@
     </div>
 
     <script src="js/map.js"></script>
+    <script src="js/theme.js"></script>
+    <script src="js/timeline.js"></script>
+    <script src="js/charts.js"></script>
 </body>
 </html>
