Add all things for ad sense

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <meta property="og:image" content="https://usatariffmap.com/img/og-preview.jpg">
     <meta property="og:url" content="https://usatariffmap.com/">
     <meta property="og:type" content="website">
+    <meta name="google-adsense-account" content="ca-pub-3351903024035248">
     <!-- Structured Data -->
     <script type="application/ld+json">
     {
@@ -38,6 +39,8 @@
         "temporalCoverage": "2025-04"
     }
     </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3351903024035248"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="container">
@@ -73,17 +76,18 @@
         
         <div id="table-view" class="tab-content">
             <!-- Ad placement before table -->
-            <!--<div class="ad-container">
+            <div class="ad-container">
+                <!-- Place this where you want the ad to appear -->
+                <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                 <ins class="adsbygoogle"
                      style="display:block"
-                     data-ad-client="ca-pub-3351903024035248"
-                     data-ad-slot="XXXXXXXXXX"
-                     data-ad-format="auto"
-                     data-full-width-responsive="true"></ins>
+                     data-ad-client="ca-pub-xxxxxxxxxxxxxxxx"
+                     data-ad-slot="1234567890"
+                     data-ad-format="auto"></ins>
                 <script>
                      (adsbygoogle = window.adsbygoogle || []).push({});
                 </script>
-            </div>-->
+            </div>
             
             <div class="table-controls">
                 <input type="text" class="search-box" id="search-input" placeholder="Search countries...">
