--- a/index.html
+++ b/index.html
@@ -174,9 +174,15 @@
             <p>Data source: Trump tariff tracker | Last updated: August 2025 | <a href="privacy-policy.html">Privacy Policy</a></p>
         </footer>
     </div>
-
+    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/openlayers/10.6.1/dist/ol.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/openlayers/10.6.1/ol.min.css"/>
     <script src="js/map.js"></script>
     <script src="js/timeline.js"></script>
     <script src="js/charts.js"></script>
+
+
+
 </body>
 </html>
